--- a/style.css
+++ b/style.css
@@ -14,17 +14,24 @@ body {
   height: 100vh;
   background: linear-gradient(116.82deg, #99E2EC 0%, #75CAE6 32.34%, #50B3E1 63.07%, #2D9CDB 100%);
   font-family: 'Poppins', sans-serif;
+  padding: 40px 30px 0 30px;
 }
 
 .logo {
-  margin: 40px 0;
   width: 450px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 50vh;
 }
 
 .heading {
   color: var(--dark-grey);
   font-size: 35px;
-  margin-left: 40px;
+  margin-bottom: 20px;
 }
 
 .highlight {
@@ -33,21 +40,22 @@ body {
 }
 
 .text {
-  margin: 20px 0;
+  margin: 10px 0;
   font-size: 14px;
   color: var(--grey);
-  width: max(80vw);
+  min-width: 250px;
+  width: auto;
+  max-width: 850px;
 }
 
 .text a {
   color: var(--grey);
 }
 
-.logo, .heading, .text, .media-icons {
-  margin-left: 30px;
+.media-icons {
+  margin-top:30px;
+  
 }
-
-.media-icons {margin-top: 50px}
 .media-icons a {text-decoration: none;}
 .media-icon {
   height: 20px; 
@@ -57,4 +65,16 @@ body {
 a:hover, .media-icon:hover {
   color: var(--dark-blue);
   transform: scale(1.1);
+}
+
+@media only screen and (min-width: 750px) {
+  body{padding: 80px 80px}
+  .logo{width:600px}
+  .content{height:60vh}
+  .heading{font-size: 60px}
+  .text{font-size:26px}
+  .media-icon {
+    height:40px;
+    margin-right: 40px;
+  }
 }
