--- a/style.css
+++ b/style.css
@@ -17,8 +17,13 @@ body {
   padding: 40px 30px 0 30px;
 }
 
+a {
+  width: auto;
+}
+
 .logo {
   width: 450px;
+  margin-top:-20px;
 }
 
 .content {
@@ -42,38 +47,37 @@ body {
 .text {
   margin: 10px 0;
   font-size: 14px;
-  color: var(--grey);
   min-width: 250px;
   width: auto;
   max-width: 850px;
 }
 
-.text a {
-  color: var(--grey);
-}
+.text, .text a {color: var(--grey);}
 
-.media-icons {
-  margin-top:30px;
-  
-}
+.media-icons {margin-top:30px;}
 .media-icons a {text-decoration: none;}
-.media-icon {
+
+.media-svg {
   height: 20px; 
-  margin-right: 15px; 
+  margin-right: 15px;
+  color: var(--dark-grey);
 }
 
-a:hover, .media-icon:hover {
+a:hover, .media-svg:hover {
   color: var(--dark-blue);
   transform: scale(1.1);
 }
 
 @media only screen and (min-width: 750px) {
   body{padding: 80px 80px}
-  .logo{width:600px}
+  .logo{width:550px}
   .content{height:60vh}
-  .heading{font-size: 60px}
+  .heading {
+    margin: -10px 0 30px 0;
+    font-size: 60px
+  }
   .text{font-size:26px}
-  .media-icon {
+  .media-svg {
     height:40px;
     margin-right: 40px;
   }
